# aib-analysis

./: .gitignore  AI_BENCHMARKING_ANALYSIS.ipynb  Copy_of_AI_BENCHMARKING_LEADERBOARDS.ipynb  README.md  bootstrapped_h2h_bot_vs_pros.csv  bot_to_main_feed_ids.csv  conftest.py  df_bot_cp_exploded.csv  df_pro_bot_resolved_questions.csv  functions.py  pgodzinai_comments.csv  pgodzinai_comments.ipynb  potential_new_framework.py  process_cp_data.ipynb  pyproject.toml  pytest.ini  test_functions.py  weighted_baseline_bot_cp.csv  weighted_bot_ONLY_peer_leaderboard_t_test.csv  weighted_bot_peer_leaderboard_t_test.csv  weighted_t_test_h2h_bot_vs_cp.csv  weighted_t_test_h2h_bot_vs_pros.csv
aib_analysis/: aggregate.py  custom_types.py  data_models.py  load_tournament.py  main.py  process_tournament.py  pseudocode.py  simulated_tournament.py  stats.py  streamlit_frontend.py  validate_tournament.py  visualize_tournament.py
archived/: AI_BENCHMARKING_ANALYSIS.ipynb  function_tests.py  functions.py  pgodzinai_comments.ipynb  problem_questions.py  process_cp_data.ipynb
input_data/: dataclip_snapshot.sql  pro_forecasts_q1.csv
leaderboard/: bots_leader_data.csv  pros_leader_data.csv
notebook_outputs/: bootstrapped_h2h_bot_vs_pros.csv  df_top_bot_pro_cp_forecasts.csv  weighted_bot_ONLY_peer_leaderboard_t_test.csv  weighted_bot_peer_leaderboard_t_test.csv  weighted_t_test_h2h_bot_vs_pros.csv
predictions/: bots_forecasts_data.csv  pros_forecasts_data.csv
refactored_notebook/: custom_types.py  data_models.py  load_tournament.py  load_tournament_data.py  main.py  scoring.py  (+5 more)
(+33 files in other folders)
