[tool.poetry]
name = "aib-analysis"
version = "0.1.0"
description = "AI Benchmarking and Analysis"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
nest-asyncio = "^1.5.8"
requests = "^2.32.4"
pydantic = "^2.9.2"
scikit-learn = "^1.5.2"
plotly = ">=5.24.1,<7.0.0"
pandas = "^2.2.3"
streamlit = "^1.20.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
pytest = "^8.3.2"
dotenv = "^0.9.9"
pytest-mock = "^3.14.1"
typeguard = "^4.4.3"
forecasting-tools = "^0.2.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
